set delete route

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -9,6 +9,7 @@
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/assets/styles.css">
+  <script type="text/javascript" src="/assets/todo-list.js"></script>
 </head>
 
 <body>
@@ -20,10 +21,9 @@
     </form>
     <br>
     <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-
+      <% for(var i=0; i < todos.length; i++) { %>
+        <li><%= todos[i].item %></li>
+     <% } %>
     </ul>
 
 
